Unit 2: Working with Expressions and Formatters expression binding custom formatter bonus: fixed Destination (now uses real data)

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,6 +19,7 @@
 		sap.ui.getCore().attachInit(function () {
 			// workaround begin: start a mock server
 			
+			/*
 			jQuery.sap.require("sap.ui.core.util.MockServer");
 			var oMockServer = new sap.ui.core.util.MockServer({
 				rootUri: "/destinations/ES5/sap/opu/odata/IWBEP/GWSAMPLE_BASIC/"
@@ -26,7 +27,7 @@
 			oMockServer.simulate("metadata.xml", {
 				bGenerateMissingMockData: true
 			});
-			oMockServer.start();
+			oMockServer.start(); */
 			
 			// workaround end
 
